--- a/RafelFinalProj/RafelFinalProj.csproj
+++ b/RafelFinalProj/RafelFinalProj.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FiltersData.cs" />
     <Compile Include="TextInputToVisibilityConverter.cs" />
     <Compile Include="XmlParser.cs" />
     <Page Include="MainScreen.xaml">
